add new swagger comments to test swag auto run
